# wordle-python

./: README.md  pyproject.toml
src/wordle/: wordle.py
tests/: test_wordle.py
