[project]
name = "wordle-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests",
    "appdirs",
]

[project.optional-dependencies]
development = [
    "pytest",
    "pytest-mock",
]

[tool.setuptools.packages.find]
where = ["src"]
